<resources>
    <string name="app_name">medical</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="name">الاسم</string>
    <string name="entryname">اسم الدخول</string>
    <string name="password">كلمة السر</string>
    <string name="renterpassword">تاكيد كلمة السر </string>
    <string name="type">فئة العضو </string>
    <string name="manage">الادراة</string>
    <string name="groupname">اسم المجموعة</string>
    <string name="groupsort">الترتيب</string>
    <string name="groupplace">مكان المجموعة</string>
    <string-array name="type_array">
        <item>قم باختيار فئة العضو</item>
        <item>مدير</item>
        <item>رئيس قسم</item>
        <item>موظف</item>
    </string-array>
    <string-array name="manage_array">
        <item>قم باختيار الادارة</item>
        <item>الادارة الاولى</item>
        <item>الادارة الثانية</item>
    </string-array>
    <string-array name="location_array">
        <item>اعلى</item>
        <item>يمين</item>
    </string-array>
    <string-array name="grouppages_array">
        <item>ادارة النظام</item>
        <item>الادارات والاقسام</item>
        <item>الشئون الادارية</item>
        <item>ادارة الاهداف</item>
        <item>عرض الاهداف</item>
    </string-array>
</resources>
